# time_measure

./: .gitignore  CMakeLists.txt  README.md  dev_tool.bat  example.cpp  time_measurement.cpp  time_measurement.h
.github/workflows/: ccpp.yml  windows.yml
include/time_measure/: time_measurement.h
src/: time_measurement.cpp
